# kepler_node

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  release.json  upgrade.sh
.github/: copilot-instructions.md
.github/skills/kepler-context/: SKILL.md  architecture.md  safety-and-gotchas.md  workflows.md
.github/workflows/: ci.yml  deploy-pi.yml  pi-hardware-smoke.yml
docs/: ARCHITECTURE.md  RUNBOOKS.md  SETUP.md
indi/fuji_focus_bridge/: CMakeLists.txt  fuji_focus_bridge.cpp  fuji_focus_bridge.h  fuji_focus_bridge.xml
indi/kepler_fuji_ccd/: kepler_fuji_ccd.xml
indi/kepler_fuji_ccd/patches/: 0001-kepler-fuji-x-t5-hardening.patch
scripts/: deploy_pi.sh  fuji_capture_probe.py  fuji_focus_bridge_verify.sh  pi_smoke.py
src/kepler_node/: __init__.py  cli.py  config.py
src/kepler_node/agent/: __init__.py  absolute_state.py  authorship.py  broker.py  claw.py  ekos.py  interfaces.py  node_management.py  session.py
src/kepler_node/api/: __init__.py  _serve.py  app.py  models.py
src/kepler_node/camera/: __init__.py  fuji_focus_assist.py  gphoto2.py  protocols.py
src/kepler_node/imaging/: __init__.py  astrometry.py  frame_quality.py  ingestion.py  protocols.py  siril_stack.py  verification.py  watcher.py
src/kepler_node/mount/: __init__.py  indi.py  protocols.py
src/kepler_node/storage/: __init__.py  filesystem.py  models.py  protocols.py
src/kepler_node/ui/: __init__.py  api_client.py  streamlit_app.py
tests/: test_agent_ekos.py  test_api_equipment_and_target.py  test_api_readiness.py  test_api_review.py  test_api_serve.py  test_api_session_actions.py  test_api_session_state.py  test_api_supervisory.py  test_camera_fuji_behavior.py  test_camera_fuji_focus_assist.py  test_camera_gphoto2.py  test_claw_state_machine.py  test_cli.py  test_cli_fuji_ownership.py  test_config.py  test_deployment_contract.py  test_imaging_astrometry.py  test_imaging_frame_quality.py  test_imaging_ingestion.py  test_imaging_siril_stack.py  test_mount_indi.py  test_node_management.py  test_package.py  test_phase2_seams.py  test_phase5.py  test_runtime_observation_and_intervention.py  test_runtime_session.py  test_storage_filesystem.py  test_supervisory_state_machine.py  test_ui_streamlit.py
